<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    android:padding="0dp">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:scaleType="centerCrop"
        android:src="@drawable/onboard_1"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:clipToOutline="true"
        android:outlineProvider="background"
        android:background="@drawable/rounded_bottom" />


    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/onboarding_title_1"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        />


    <TextView
        android:id="@+id/subtitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/onboarding_subtitle_1"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:gravity="center"
         />

    <!-- Garis Penanda -->
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        app:tabIndicatorColor="@color/blue"
        app:tabIndicatorHeight="3dp"
        app:tabSelectedTextColor="@color/blue"
        app:tabTextColor="@color/light_blue"
        app:tabIndicatorFullWidth="false" />


    <Button
        android:id="@+id/actionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/blue"
        android:text="@string/start"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:paddingVertical="12dp"
        android:elevation="4dp" />

</LinearLayout>
